--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,3 +14,7 @@ license = "MIT OR Apache-2.0"
 [dependencies]
 log = { version = "0.4", features = ["std"] }
 colored = "2.0.0"
+
+[[example]]
+name = "standard"
+path = "examples/standard.rs"
